--- a/src/reall3d/style/style.less
+++ b/src/reall3d/style/style.less
@@ -12,6 +12,14 @@ body {
     color: white;
 }
 
+#map {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
 #gsviewer-canvas {
     width: 100%;
     height: 100%;
