--- a/src/reall3d/style/style.less
+++ b/src/reall3d/style/style.less
@@ -1,6 +1,6 @@
-// ================================
-// Copyright (c) 2025 reall3d.com
-// ================================
+// ==============================================
+// Copyright (c) 2025 reall3d.com, MIT license
+// ==============================================
 body {
     overflow: hidden;
     margin: 0;
