--- a/src/reall3d/style/style.less
+++ b/src/reall3d/style/style.less
@@ -83,6 +83,10 @@ body {
             width: 100%;
             font-size: 14px;
         }
+
+        &.map .map-hidden {
+            display: none;
+        }
     }
 
     .operation {
